--- a/index.html
+++ b/index.html
@@ -4,13 +4,17 @@
     <meta charset="UTF-8">
     <title>Hello World!</title>
   </head>
+  <style>
+    body {
+      margin: 0;
+    }
+    html, body, webview {
+      width: 100%;
+      height: 100%;
+    }
+  </style>
   <body>
-    <h1>Hello World!</h1>
-    <!-- All of the Node.js APIs are available in this renderer process. -->
-    We are using Node.js <script>document.write(process.versions.node)</script>,
-    Chromium <script>document.write(process.versions.chrome)</script>,
-    and Electron <script>document.write(process.versions.electron)</script>.
-
+    <webview src="https://bitmovin.com/demos/drm"/>
     <script>
       // You can also require other files to run in this process
       require('./renderer.js')
