--- a/index.html
+++ b/index.html
@@ -14,10 +14,6 @@
     }
   </style>
   <body>
-    <webview src="https://bitmovin.com/demos/drm"/>
-    <script>
-      // You can also require other files to run in this process
-      require('./renderer.js')
-    </script>
+    <webview src="https://bitmovin.com/demos/drm" plugins/>
   </body>
 </html>
