--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
     }
   </style>
   <body>
-    <webview src="https://bitmovin.com/demos/drm" plugins/>
+    <webview plugins src="https://shaka-player-demo.appspot.com/demo/#asset=https://media.axprod.net/TestVectors/v7-MultiDRM-SingleKey/Manifest.mpd;lang=en-GB;build=uncompiled"/>
   </body>
 </html>
